--- a/styles/style.css
+++ b/styles/style.css
@@ -50,7 +50,7 @@ main {
     flex-direction: column;
     align-items: center;
     width: 100vw;
-    max-width: 23rem;
+    max-width: 23em;
     padding: 1.1rem 1.6rem;
     border-radius: 15px;
     background-color: var(--color-main);
