--- a/styles/style.css
+++ b/styles/style.css
@@ -50,8 +50,8 @@ main {
     flex-direction: column;
     align-items: center;
     width: 100vw;
-    max-width: 23em;
-    padding: 1.1rem 1.6rem;
+    max-width: 20.5em;
+    padding: 1.1em 1.6em;
     border-radius: 15px;
     background-color: var(--color-main);
 }
@@ -62,14 +62,14 @@ img {
 }
 h1 {
     margin: 0;
-    margin-top: 1.6rem;
+    margin-top: 1.6em;
 }
 p {
-    margin: 0.4rem;
+    margin: 0.4em;
 }
 .strong {
     color: var(--color-primary);
-    margin-bottom: 1.8rem;
+    margin-bottom: 1.8em;
 }
 a.social-link {
     text-decoration: none;
@@ -78,7 +78,7 @@ a.social-link {
     justify-content: center;
     width: 100%;
     height: 45px;
-    margin: 0.6rem 0rem;
+    margin: 0.6em 0em;
     border: none;
     background-color: var(--color-button);
     border-radius: 8px;
