--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@ main {
     width: 100%;
     height: 100%;
     min-width: 23em;
-    max-width: 24.6em;
+    max-width: 27em;
     max-height: 41.5em;
     padding: 1.1em 1.6em;
     border-radius: 15px;
@@ -102,4 +102,9 @@ a.social-link {
 }
 .attribution a {
     color: hsl(228, 45%, 44%); 
+}
+@media screen and(max-width: 412px) {
+    main {
+        max-width: 
+    }
 }
