--- a/styles/style.css
+++ b/styles/style.css
@@ -51,14 +51,14 @@ body {
 main {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    min-width: 23em;
-    max-width: 34.1em;
-    max-height: 41.5em;
-    padding: 1.1em 1.6em;
+    width: 90vw;
+    max-width: 328px;
+    height: 100vh;
+    max-height: 578px;
     border-radius: 15px;
+    padding: 18px;
     background-color: var(--color-main);
 }
 img {
@@ -102,9 +102,4 @@ a.social-link {
 }
 .attribution a {
     color: hsl(228, 45%, 44%); 
-}
-@media screen and(max-width: 412px) {
-    main {
-        max-width: 
-    }
 }
