--- a/styles/style.css
+++ b/styles/style.css
@@ -12,9 +12,6 @@
 /* <uniquifier>: Use a uniquifier for the class name */
 /* <weight>: Use a value from 100 to 900 */
 
-* {
-    box-sizing: border-box;
-}
 .font-inter{
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
@@ -35,43 +32,42 @@
 
 html {
     font-size: 14px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
 }
 body {
-    display: flex;
-    flex-direction: column;
+    display:flex;
     justify-content: center;
     align-items: center;
+    min-height: 582px;
+    height: 100vh;
+    margin: 0;
+    padding: 0; 
     background-color: var(--color-body);
     color: var(--color-text);
 }
 main {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    width: 90vw;
-    max-width: 328px;
-    height: 100vh;
-    max-height: 578px;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 279px;
+    height: 534px;
+    padding: 24px;
     border-radius: 15px;
-    padding: 18px;
     background-color: var(--color-main);
 }
 img {
-    width: 87px;
+    width: 86px;
     height: auto;
     border-radius: 44px;
+    margin-bottom: 24px;
 }
 h1 {
     margin: 0;
-    margin-top: 0.5em;
 }
 p {
-    margin: 0.4em;
+    margin: 0;
+}
+p:nth-child(4) {
+    margin-bottom: 24px;
 }
 .strong {
     color: var(--color-primary);
@@ -84,11 +80,13 @@ a.social-link {
     justify-content: center;
     width: 100%;
     height: 45px;
-    margin: 0.6em 0em;
-    border: none;
     background-color: var(--color-button);
     border-radius: 8px;
     color: var(--color-text);
+    margin-bottom: 16px;
+}
+a.social-link:last-child {
+    margin: 0;
 }
 .social-link:hover {
     background-color: var(--color-primary);
