--- a/styles/style.css
+++ b/styles/style.css
@@ -47,13 +47,15 @@ body {
 main {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
-    width: 85%;
+    width: 87%;
     max-width: 385px;
     min-width: 305px;
-    height: 534px;
+    height: 100%;
+    max-height: 577px;
+    min-height: 577px;
     padding: 24px;
     border-radius: 15px;
     background-color: var(--color-main);
