--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@ main {
     min-width: 305px;
     height: 100%;
     max-height: 577px;
-    min-height: 577px;
+    min-height: max-content;
     padding: 24px;
     border-radius: 15px;
     background-color: var(--color-main);
