--- a/styles/style.css
+++ b/styles/style.css
@@ -30,9 +30,6 @@
     font-weight: 700;
   }
 
-html {
-    font-size: 14px;
-}
 body {
     display:flex;
     justify-content: center;
@@ -50,14 +47,14 @@ main {
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
-    width: 87%;
-    max-width: 385px;
-    min-width: 305px;
+    width: 85%;
+    max-width: 23rem;
+    min-width: 20rem;
     height: 100%;
-    max-height: 577px;
+    max-height: 38rem;
     min-height: max-content;
-    padding: 24px;
-    border-radius: 15px;
+    padding: 1.6rem;
+    border-radius: .8rem;
     background-color: var(--color-main);
 }
 img {
@@ -67,9 +64,11 @@ img {
     margin-bottom: 24px;
 }
 h1 {
+    font-size: 1.5rem;
     margin: 0;
 }
 p {
+    font-size: 14px;
     margin: 0;
 }
 p:nth-child(4) {
@@ -81,6 +80,7 @@ p:nth-child(4) {
 }
 a.social-link {
     text-decoration: none;
+    font-size: 14px;
     display: flex;
     align-items: center;
     justify-content: center;
